--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     padding: 0;
     margin: 0;
 }
+
 body{
    background-color: #1E2022;
+   font-family:sans-serif;
 }
 
 .head{
-    /* background-color: #F0F5F9; */
     background-color: silver;
     display: flex;
     justify-content: space-between;
@@ -35,7 +36,6 @@ p{
     text-align: center;
     font-weight: bold;
     padding-top: 10px;
-    /* color:#F0F5F9; */
 }
 
 .menu-icon {
@@ -81,33 +81,32 @@ li{
     list-style: none;
 }
 
-
 form{
     position: relative;
-    width: 400px;
+    width: 420px;
     height: 320px;
     background-color: silver;
     margin: 0 auto;
     margin-top: 100px;
     border-radius: 12px;
+    
 }
 
 label{
+    padding-top: 10px;
     padding-left: 10px;
     font-weight: bold;
 }
 
 #login{
-    font-size: 18px;
+    font-size: 16px;
 }
 
 #login a{
-    /* color: #C9D6DF; */
     color: rgb(1, 147, 1);
 }
 
 #login a:hover{
-    /* color:  #C9D6DF; */
     color:greenyellow;
     font-size: 18px;
 }
@@ -124,11 +123,11 @@ button{
     border-radius:15px;
     color: black;
     font-weight: bold;
-    /* background-color: #C9D6DF; */
     background-color: rgb(1, 147, 1);
 }
 
 input{
+    font-family: Zain-Bold;
     appearance: none;
     box-sizing: border-box;
     border-radius: 4px;
@@ -142,6 +141,7 @@ input[type="email"]{
     width: 350px;
     height: 25px;
     margin-left: 25px;  
+    width: 90%;
 }
 
 input:focus{
@@ -152,6 +152,8 @@ input[type="password"]{
     height: 25px;
     width: 350px;
     margin-left: 25px;
+    width: 90%;
+
 }
 
 input[type="text"]{
