--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ p{
     font-size: 28px;
     text-align: center;
     font-weight: bold;
+    padding-top: 10px;
     /* color:#F0F5F9; */
 }
 
@@ -84,7 +85,7 @@ li{
 form{
     position: relative;
     width: 400px;
-    height: 300px;
+    height: 320px;
     background-color: silver;
     margin: 0 auto;
     margin-top: 100px;
@@ -92,7 +93,7 @@ form{
 }
 
 label{
-    padding-left: 5px;
+    padding-left: 10px;
     font-weight: bold;
 }
 
